fix notes block alignment persistence and list marker layout

--- a/src/components/Notes/features/Editor/styles/markdown.css
+++ b/src/components/Notes/features/Editor/styles/markdown.css
@@ -57,6 +57,33 @@
   line-height: calc(1em + 8px);
 }
 
+.milkdown li:has(> [data-text-align="center"]) {
+  text-align: center;
+}
+
+.milkdown li:has(> [data-text-align="right"]) {
+  text-align: right;
+}
+
+.milkdown li:has(> [data-text-align="center"]):not([data-item-type="task"]),
+.milkdown li:has(> [data-text-align="right"]):not([data-item-type="task"]) {
+  list-style-position: inside;
+}
+
+.milkdown li:has(> [data-text-align="center"]):not([data-item-type="task"]) > [data-text-align],
+.milkdown li:has(> [data-text-align="right"]):not([data-item-type="task"]) > [data-text-align] {
+  display: inline-block;
+  width: fit-content;
+  max-width: 100%;
+}
+
+.milkdown li:has(> [data-text-align="center"]) > ul,
+.milkdown li:has(> [data-text-align="center"]) > ol,
+.milkdown li:has(> [data-text-align="right"]) > ul,
+.milkdown li:has(> [data-text-align="right"]) > ol {
+  text-align: left;
+}
+
 .milkdown ul>li:not(.task-list-item) {
   list-style-type: disc;
 }
@@ -188,6 +215,26 @@
   min-width: 0;
   margin: 0;
   /* Remove potential margin to ensure perfect alignment */
+}
+
+.milkdown li[data-item-type="task"]:has(> [data-text-align="center"]) {
+  justify-content: center;
+}
+
+.milkdown li[data-item-type="task"]:has(> [data-text-align="right"]) {
+  justify-content: flex-end;
+}
+
+.milkdown li[data-item-type="task"]:has(> [data-text-align="center"])::before,
+.milkdown li[data-item-type="task"]:has(> [data-text-align="right"])::before {
+  margin-left: 0;
+}
+
+.milkdown li[data-item-type="task"]:has(> [data-text-align="center"])>[data-text-align],
+.milkdown li[data-item-type="task"]:has(> [data-text-align="right"])>[data-text-align] {
+  flex: 0 1 auto;
+  width: fit-content;
+  max-width: calc(100% - 24px);
 }
 
 /* Horizontal Rule */
